--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Consulte o saldo e as recargas do seu Vale Transporte Digital PasseFácil de forma simplificada!">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -11,7 +11,7 @@
   <meta name="apple-mobile-web-app-title" content="passefacil">
   <link rel="apple-touch-icon" href="/icons/Icon-192.png">
 
-  <title>passefacil</title>
+  <title>PasseFácil</title>
   <link rel="manifest" href="/manifest.json">
 </head>
 <body>
