--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="apple-mobile-web-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="passefacil">
   <link rel="apple-touch-icon" href="/icons/Icon-192.png">
+  <link rel="icon" href="/icons/Icon-192.png">
 
   <title>PasseFácil</title>
   <link rel="manifest" href="/manifest.json">
